--- a/Resources/Private/Layouts/Default.html
+++ b/Resources/Private/Layouts/Default.html
@@ -1,4 +1,5 @@
-<f:be.container loadExtJs="false" loadJQuery="true" includeJsFiles="{0: '{f:uri.resource(path:\'Js/angular.min.js\')}'}">
+<f:be.container loadExtJs="false" loadJQuery="true"
+				includeJsFiles="{0: '{f:uri.resource(path:\'Js/angular.min.js\')}'}">
 	<div class="module" ng-app>
 		<div class="module-loading-indicator"></div>
 		<div class="module-docheader t3js-module-docheader">
@@ -13,21 +14,21 @@
 			<div class="module-docheader-bar module-docheader-bar-buttons t3js-module-docheader-bar t3js-module-docheader-bar-buttons">
 				<div class="module-docheader-bar-column-left">
 					<f:be.menus.actionMenu>
-						<f:be.menus.actionMenuItem label="Overview" controller="Seeder" action="index" />
-						<f:be.menus.actionMenuItem label="New" controller="Seeder" action="new" />
+						<f:be.menus.actionMenuItem label="Overview" controller="Seeder" action="index"/>
+						<f:be.menus.actionMenuItem label="New" controller="Seeder" action="new"/>
 					</f:be.menus.actionMenu>
 				</div>
 				<div class="module-docheader-bar-column-right">
 					<div class="btn-toolbar">
-						<f:be.buttons.shortcut />
+						<f:be.buttons.shortcut/>
 					</div>
 				</div>
 			</div>
 		</div>
 		<div class="module-body t3js-module-body">
-			<f:render partial="New/Form/Errors" arguments="{_all}" />
-			<f:render section="header" />
-			<f:render section="main" />
+			<f:render partial="New/Form/Errors" arguments="{_all}"/>
+			<f:render section="header"/>
+			<f:render section="main"/>
 		</div>
 	</div>
 
