* New Flash Message Style

--- a/Resources/Private/Templates/Seeder/Index.html
+++ b/Resources/Private/Templates/Seeder/Index.html
@@ -21,7 +21,7 @@
 						<f:translate key="noSeeds"/>
 					</p>
 					<p>
-						<f:link.action action="new"><f:translate key="createNewSeeder"/></f:link.action>
+						<f:link.action class="btn btn-primary" action="new"><f:translate key="createNewSeeder"/></f:link.action>
 					</p>
 				</f:else>
 			</f:if>
