--- a/Resources/Private/Partials/New/Form/Errors.html
+++ b/Resources/Private/Partials/New/Form/Errors.html
@@ -1,29 +1,37 @@
-<f:flashMessages as="errorMessages">
-	<div class="alert alert-danger">
-		<div class="media">
-			<div class="media-left">
-				<span class="fa-stack fa-lg">
-					<i class="fa fa-circle fa-stack-2x"></i>
-					<i class="fa fa-times fa-stack-1x"></i>
-				</span>
-			</div>
-			<div class="media-body">
-				<f:if condition="{errorMessages -> f:count()} > 0">
-					<f:for each="{errorMessages}" as="errorMessage">
-						<h4 class="alert-title">{errorMessage.message}</h4>
-					</f:for>
-				</f:if>
 
-				<f:form.validationResults>
-					<f:for each="{validationResults.flattenedErrors}" as="errors">
-						<div class="alert-message">
-							<f:for each="{errors}" as="error">
-								<f:translate key="error.code.{error.code}"/>
-							</f:for>
-						</div>
-					</f:for>
-				</f:form.validationResults>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en"
+	  xmlns:f="http://xsd.helmut-hummel.de/ns/TYPO3/CMS/Fluid/ViewHelpers">
+
+<f:flashMessages as="errorMessages">
+
+<f:if condition="{errorMessages -> f:count()} > 0">
+	<f:for each="{errorMessages}" as="errorMessage">
+		<div class="alert {errorMessage.class}">
+			<div class="media">
+				<div class="media-left">
+					<span class="fa-stack fa-lg">
+						<i class="fa fa-circle fa-stack-2x"></i>
+						<i class="fa fa-times fa-stack-1x"></i>
+					</span>
+				</div>
+				<div class="media-body">
+					<h4 class="alert-title">{errorMessage.message}</h4>
+					<f:form.validationResults>
+						<f:for each="{validationResults.flattenedErrors}" as="errors">
+							<div class="alert-message">
+								<f:for each="{errors}" as="error">
+									<f:translate key="error.code.{error.code}"/>
+								</f:for>
+							</div>
+						</f:for>
+					</f:form.validationResults>
+
+				</div>
 			</div>
 		</div>
-	</div>
+	</f:for>
+</f:if>
+
 </f:flashMessages>
+
+</html>
