* Added some more Actions

--- a/Resources/Private/Layouts/Default.html
+++ b/Resources/Private/Layouts/Default.html
@@ -26,7 +26,7 @@
 			</div>
 		</div>
 		<div class="module-body t3js-module-body">
-			<f:render partial="New/Form/Errors" arguments="{_all}"/>
+			<f:render partial="Form/Errors" arguments="{_all}"/>
 			<f:render section="header"/>
 			<f:render section="main"/>
 		</div>
