--- a/Resources/Private/Templates/Seeder/Show.html
+++ b/Resources/Private/Templates/Seeder/Show.html
@@ -10,7 +10,7 @@
 <f:section name="main">
 	<div class="row">
 		<div class="col-md-6">
-			<f:render partial="Form" arguments="{action: 'edit', seed: seed}" />
+			<f:render partial="Form" section="Form" arguments="{action: 'edit', seed: seed, tables: tables}" />
 		</div>
 	</div>
 </f:section>
