--- a/Resources/Private/Partials/Form.html
+++ b/Resources/Private/Partials/Form.html
@@ -35,7 +35,7 @@
 						<label for="{column.name}">{column.name}</label>
 					</div>
 					<div class="col-sm-8">
-						<f:render section="main" partial="Column/{column}" arguments="{action: action, column: column, providers: providers}" />
+						<f:render section="main" partial="Column/{column}" arguments="{action: action, column: column, providers: providers, properties: seed.properties}" />
 					</div>
 					<div class="col-sm-4">
 						<div class="form-inline">
@@ -43,10 +43,10 @@
 								<label for="provider{column.name}"><f:translate key="type" /></label>
 								<f:if condition="{action} == 'edit'">
 									<f:then>
-										<f:form.select id="provider{column.name}" value="{column.name -> seeder:testData.guessProvider()}" options="{providers}" class="form-control" additionalAttributes="{readonly: 'readonly'}" />
+										<f:form.select name="properties[{column.name}]" id="provider{column.name}" value="{seed.properties -> seeder:array(key: '{column.name}')}" options="{providers}" class="form-control" additionalAttributes="{readonly: 'readonly'}" />
 									</f:then>
 									<f:else>
-										 <f:form.select id="provider{column.name}" value="{column.name -> seeder:testData.guessProvider()}" options="{providers}" class="form-control" />
+										<f:form.select name="properties[{column.name}]" id="provider{column.name}" value="{seed.properties -> seeder:array(key: '{column.name}')}" options="{providers}" class="form-control" />
 									</f:else>
 								</f:if>
 							</div>
