--- a/Resources/Private/Templates/Seeder/Edit.html
+++ b/Resources/Private/Templates/Seeder/Edit.html
@@ -10,7 +10,7 @@
 <f:section name="main">
 	<div class="row">
 		<div class="col-md-6">
-			<f:render partial="Form" section="Form" arguments="{action: 'update', seed: seed, table: table, providers: providers}" />
+			<f:render partial="Form" section="Form" arguments="{action: 'update', seed: seed, table: table, tables: tables, providers: providers}" />
 		</div>
 	</div>
 </f:section>
